(chore) CI fixes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: "18.x"
       - run: yarn install --immutable
       - run: yarn verify
-      - run: yarn build
+      - run: yarn turbo build
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
