--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,10 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      TURBO_API: 'http://127.0.0.1:9080'
+      TURBO_TOKEN: ${{ secrets.TURBO_SERVER_TOKEN }}
+      TURBO_TEAM: ${{ github.repository_owner }}
 
     steps:
       - uses: actions/checkout@v3
@@ -24,9 +28,21 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "18.x"
-      - run: yarn install --immutable
+          registry-url: "https://registry.npmjs.org"
+
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: yarn install --immutable
+        
+      - name: Setup local cache server for Turborepo
+        uses: felixmosh/turborepo-gh-artifacts@v2
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          server-token: ${{ secrets.TURBO_SERVER_TOKEN }}
+
       - run: yarn verify
-      - run: yarn turbo build
+      - run: yarn turbo build --color --concurrency=5
+
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
@@ -43,22 +59,48 @@ jobs:
 
     steps:
       - run: echo "Uncomment the lines below and delete this one."
-      # - uses: actions/checkout@v2
+      # - uses: actions/checkout@v3
+
       # - name: Download Artifacts
       #   uses: actions/download-artifact@v3
-      # - name: Use Node.js
+
+      # - name: Setup Node.js
       #   uses: actions/setup-node@v3
       #   with:
       #     node-version: "18.x"
       #     registry-url: "https://registry.npmjs.org"
-      # - run: yarn install --immutable
-      # - run: yarn version "$(node -e "console.log(require('semver').inc(require('./package.json').version, 'patch'))")-pre.${{ github.run_number }}"
-      # - run: yarn build
-      # - run: git config user.email "info@openmrs.org" && git config user.name "OpenMRS CI"
+
+      # - name: Cache dependencies
+      #   id: cache
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: "**/node_modules"
+      #     key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+
+      # - name: Install dependencies
+      #   if: steps.cache.outputs.cache-hit != 'true'
+      #   run: yarn install --immutable
+        
+      # - name: Setup local cache server for Turborepo
+      #   uses: felixmosh/turborepo-gh-artifacts@v2
+      #   with:
+      #     repo-token: ${{ secrets.GITHUB_TOKEN }}
+      #     server-token: ${{ secrets.TURBO_SERVER_TOKEN }}
+
+      # - name: Version
+      #   run: yarn version "$(node -e "console.log(require('semver').inc(require('./package.json').version, 'patch'))")-pre.${{ github.run_number }}"
+
+      # - name: Build
+      #   run: yarn turbo build --color --concurrency=5
+
+      # - run: git config user.email "<>" && git config user.name "UgandaEMR CI"
       # - run: git add . && git commit -m "Prerelease version" --no-verify
-      # - run: yarn config set npmAuthToken "${NODE_AUTH_TOKEN}" && yarn npm publish --access public --tag next
+
+      # - name: Pre-release
+      #   run: yarn config set npmAuthToken "${NODE_AUTH_TOKEN}" && yarn npm publish --access public --tag next
       #   env:
       #     NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+
       # - name: Upload Artifacts
       #   uses: actions/upload-artifact@v3
       #   with:
@@ -82,7 +124,18 @@ jobs:
         with:
           node-version: "18.x"
           registry-url: 'https://registry.npmjs.org'
-      - run: yarn install --immutable
+
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: "**/node_modules"
+          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: yarn install --immutable
+
       - run: yarn config set npmAuthToken "${NODE_AUTH_TOKEN}" &&  yarn npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
