--- a/package.json
+++ b/package.json
@@ -99,5 +99,6 @@
     "typescript": "^4.9.5",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4"
-  }
+  },
+  "packageManager": "yarn@3.6.2"
 }
