--- a/.turbo.json
+++ b/.turbo.json
@@ -12,7 +12,6 @@
     "coverage": {
       "outputs": ["coverage/**"]
     },
-    "typescript": {},
-    "verify": {}
+    "typescript": {}
   }
 }
