--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,6 @@
-name: Node.js CI
+name: UgandaEMR CI
 
 on:
-  workflow_dispatch: # enables the workflow to be triggered manually
   push:
     branches: [main]
   pull_request:
@@ -9,11 +8,10 @@ on:
   release:
     types:
       - created
-
 env:
-  ESM_NAME: "@ugandaemr/esm-template-app"
-  JS_NAME: "esm-ugandaemr-template-app.js"
-
+  ESM_NAME: "@ugandaemr/esm-primary-navigation-app"
+  JS_NAME: "esm-ugandaemr-primary-navigation-app.js"
+  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -30,10 +28,17 @@ jobs:
           node-version: "18.x"
           registry-url: "https://registry.npmjs.org"
 
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: "**/node_modules"
+          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+            
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: yarn install --immutable
-        
+      
       - name: Setup local cache server for Turborepo
         uses: felixmosh/turborepo-gh-artifacts@v2
         with:
@@ -58,55 +63,51 @@ jobs:
     if: ${{ github.event_name == 'push' }}
 
     steps:
-      - run: echo "Uncomment the lines below and delete this one."
-      # - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      # - name: Download Artifacts
-      #   uses: actions/download-artifact@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18.x"
+          registry-url: "https://registry.npmjs.org"
 
-      # - name: Setup Node.js
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: "18.x"
-      #     registry-url: "https://registry.npmjs.org"
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: "**/node_modules"
+          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
 
-      # - name: Cache dependencies
-      #   id: cache
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: "**/node_modules"
-      #     key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
-
-      # - name: Install dependencies
-      #   if: steps.cache.outputs.cache-hit != 'true'
-      #   run: yarn install --immutable
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: yarn install --immutable
         
-      # - name: Setup local cache server for Turborepo
-      #   uses: felixmosh/turborepo-gh-artifacts@v2
-      #   with:
-      #     repo-token: ${{ secrets.GITHUB_TOKEN }}
-      #     server-token: ${{ secrets.TURBO_SERVER_TOKEN }}
+      - name: Setup local cache server for Turborepo
+        uses: felixmosh/turborepo-gh-artifacts@v2
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          server-token: ${{ secrets.TURBO_SERVER_TOKEN }}
 
-      # - name: Version
-      #   run: yarn version "$(node -e "console.log(require('semver').inc(require('./package.json').version, 'patch'))")-pre.${{ github.run_number }}"
+      - name: Version
+        run: yarn version "$(node -e "console.log(require('semver').inc(require('./package.json').version, 'patch'))")-pre.${{ github.run_number }}"
 
-      # - name: Build
-      #   run: yarn turbo build --color --concurrency=5
+      - name: Build
+        run: yarn turbo build --color --concurrency=5
 
-      # - run: git config user.email "<>" && git config user.name "UgandaEMR CI"
-      # - run: git add . && git commit -m "Prerelease version" --no-verify
+      - run: git config user.email "<>" && git config user.name "UgandaEMR CI"
+      - run: git add . && git commit -m "Prerelease version" --no-verify
 
-      # - name: Pre-release
-      #   run: yarn config set npmAuthToken "${NODE_AUTH_TOKEN}" && yarn npm publish --access public --tag next
-      #   env:
-      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+      - name: Pre-release
+        run: yarn config set npmAuthToken "${NODE_AUTH_TOKEN}" && yarn npm publish --access public --tag next
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
-      # - name: Upload Artifacts
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: dist
-      #     path: |
-      #       dist
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist
+          path: |
+            dist
 
   release:
     runs-on: ubuntu-latest
@@ -119,11 +120,12 @@ jobs:
       - uses: actions/checkout@v3
       - name: Download Artifacts
         uses: actions/download-artifact@v3
-      - name: Use Node.js
+
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "18.x"
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: "https://registry.npmjs.org"
 
       - name: Cache dependencies
         id: cache
@@ -131,27 +133,18 @@ jobs:
         with:
           path: "**/node_modules"
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
-
+  
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: yarn install --immutable
-
+        
+      - name: Setup local cache server for Turborepo
+        uses: felixmosh/turborepo-gh-artifacts@v2
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          server-token: ${{ secrets.TURBO_SERVER_TOKEN }}
+            
       - run: yarn config set npmAuthToken "${NODE_AUTH_TOKEN}" &&  yarn npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-  
-  deploy:
-    runs-on: ubuntu-latest
 
-    needs: pre_release
-
-    if: ${{ github.event_name == 'push' }}
-
-    steps:
-      - run: echo "Uncomment the lines below and delete this one."
-      # - name: Trigger RefApp Build
-      #   uses: fjogeleit/http-request-action@master
-      #   with:
-      #     url: https://ci.openmrs.org/rest/api/latest/queue/REFAPP-D3X
-      #     method: "POST"
-      #     customHeaders: '{ "Authorization": "Bearer ${{ secrets.BAMBOO_TOKEN }}" }'
